QuickJS: Fix build with newer Windows SDKs
See https://developercommunity.visualstudio.com/t/NAN-is-no-longer-
compile-time-constant-i/10688907.

Change-Id: I6360d9eb250721df40eac86e8f63d9c0af706aa6
Reviewed-by: Ivan Komissarov <ABBAPOH@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,7 +66,7 @@ if (QBS_INSTALL_HTML_DOCS OR QBS_INSTALL_QCH_DOCS)
     endif()
 endif()
 
-add_definitions(-DQT_NO_QSNPRINTF)
+add_definitions(-DQT_NO_QSNPRINTF -D_UCRT_NOISY_NAN)
 
 add_subdirectory(src)
 add_subdirectory(doc)
