GitHub actions: fix release jobs
Change-Id: I49c4a1e2125cd5070105c4a71ce931f4932f7cf0
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -28,9 +28,9 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Pull the Docker Image
-      run: docker compose pull jammy
+      run: docker compose pull noble
     - name: Build Qbs Docs
-      run: docker compose run jammy ${{ matrix.config.script }}
+      run: docker compose run noble ${{ matrix.config.script }}
     - name: Upload artifacts
       uses: 'actions/upload-artifact@v4'
       with:
