--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -204,6 +204,7 @@ jobs:
       uses: ./.github/actions/download-qt
       with:
         toolchain: clang_64
+        version: 6.7.3
     - name: Install Qt Creator
       uses: ./.github/actions/download-qtc
     - name: Setup Qbs
