Use C11 lang version for building
Change-Id: Idfcc482b7cdecbef1acc425692b47eb2c905e5dd
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/src/shared/quickjs/CMakeLists.txt
+++ b/src/shared/quickjs/CMakeLists.txt
@@ -14,6 +14,7 @@ add_qbs_library(qbsquickjs
     DEFINES
         "CONFIG_VERSION=\"2021-03-27\""
 )
+set_property(TARGET qbsquickjs PROPERTY C_STANDARD 11)
 if(QBS_QUICKJS_LEAK_CHECK)
   add_definitions(-DDUMP_LEAKS)
 endif()
