CI: Update Qt 6 images
Task-number: QBS-1799
Change-Id: I7233fb75d724d592899c3fcc3927785c5fb5c0a0
Reviewed-by: Ivan Komissarov <ABBAPOH@gmail.com>

--- a/docker/windowsservercore/Dockerfile
+++ b/docker/windowsservercore/Dockerfile
@@ -26,6 +26,8 @@ RUN choco install -y python --version 3.9 && \
     choco install -y git --version 2.24.0 --params "/GitAndUnixToolsOnPath" && \
     choco install -y vswhere
 
+RUN pip install -U pip
+
 # for building the documentation
 RUN pip install beautifulsoup4 lxml
 
