docker: bring the static Qt image back
Change-Id: I0636784bdcf2c35e014523afebf32d05b1c9dede
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -400,6 +400,13 @@ jobs:
             script: './scripts/test-qbs.sh',
           }
         - {
+            name: 'Run Linux tests (gcc, Qt 6, static)',
+            image: 'noble-qt6-static',
+            suffix: 'linux-noble',
+            profile: 'qt-gcc_64',
+            script: './scripts/test-qbs.sh',
+          }
+        - {
             name: 'Run Linux tests (gcc, Qt 5)',
             image: 'noble-qt5',
             suffix: 'linux-noble',
