docker: install libc++-18-dev
To be able to use 'import std'

Change-Id: I03ee705914a92c86517343e53f5906adcef41713
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/docker/noble/Dockerfile
+++ b/docker/noble/Dockerfile
@@ -51,6 +51,7 @@ RUN apt-get update -qq && \
         help2man \
         icoutils \
         libcapnp-dev \
+        libc++-18-dev \
         libclang-rt-18-dev \
         libdbus-1-3 \
         libfreetype6 \
