--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -247,6 +247,7 @@ jobs:
             cacheid: 'msvc',
             with_tests: 0,
             suffix: 'windows',
+            qmake: 'qmake.exe',
           }
         - {
             name: 'Build on Windows (CMake)',
@@ -255,6 +256,7 @@ jobs:
             cacheid: 'msvc-cmake',
             with_tests: 0,
             suffix: 'windows-cmake',
+            qmake: 'qmake.exe',
           }
     env:
       BUILD_OPTIONS: ${{ matrix.config.options }}
@@ -297,6 +299,14 @@ jobs:
     - uses: TheMrMilchmann/setup-msvc-dev@v3
       with:
         arch: x64
+    - name: Test qmake
+      run: |
+        echo "$PATH"
+        echo "qmake: ${{ matrix.config.qmake }}"
+        echo "qmake: $(which ${{ matrix.config.qmake }})"
+        echo "qmake\\path: $(where ${{ matrix.config.qmake }})"
+        echo "qmake/path: $(cygpath $(where ${{ matrix.config.qmake }}))"
+      shell: bash
     - name: Setup Qbs
       run: |
         qbs setup-toolchains --detect
@@ -670,13 +680,24 @@ jobs:
       matrix:
         config:
         - {
-            name: 'Run Windows tests (MSVC 2022)',
+            name: 'Run Windows tests (MSVC 2022, x64)',
             target: 'desktop',
             toolchain: 'win64_msvc2022_64',
             testProfile: 'MSVC2022-x64',
             conan_toolchain: 'msvc_64',
             qtVersion: '6.8.3',
             script: './scripts/test-qbs.sh',
+            qmake: 'qmake.exe',
+          }
+        - {
+            name: 'Run Windows tests (MSVC 2022, arm64)',
+            target: 'desktop',
+            toolchain: 'win64_msvc2022_arm64_cross_compiled',
+            testProfile: 'MSVC2022-x64_arm64',
+            conan_toolchain: '',
+            qtVersion: '6.8.3',
+            script: './scripts/test-qbs.sh',
+            qmake: 'qmake.bat',
           }
         - {
             name: 'Run Windows tests (MSVC 2022, Qt 5.15)',
@@ -686,6 +707,7 @@ jobs:
             conan_toolchain: '',
             qtVersion: '5.15.2',
             script: './scripts/test-qt.sh',
+            qmake: 'qmake.exe',
           }
         - {
             name: 'Run Windows tests (clang-cl)',
@@ -695,6 +717,7 @@ jobs:
             conan_toolchain: '',
             qtVersion: '6.8.3',
             script: './scripts/test-qbs.sh',
+            qmake: 'qmake.exe',
           }
         - {
             name: 'Run Windows tests (MinGW)',
@@ -704,6 +727,7 @@ jobs:
             conan_toolchain: 'mingw_64',
             qtVersion: '6.5.0',
             script: './scripts/test-qbs.sh',
+            qmake: 'qmake.exe',
           }
     env:
       QTEST_FUNCTION_TIMEOUT: 9000000
@@ -733,6 +757,13 @@ jobs:
       with:
         toolchain: ${{ matrix.config.toolchain }}
         version: ${{ matrix.config.qtVersion }}
+    - name: Install Host Qt
+      if: matrix.config.toolchain == 'win64_msvc2022_arm64_cross_compiled'
+      uses: ./.github/actions/download-qt
+      with:
+        target: 'desktop'
+        toolchain: 'win64_msvc2022_64'
+        version: ${{ matrix.config.qtVersion }}
     - name: Install MinGW
       uses: ./.github/actions/download-mingw
     - name: Install Ninja
@@ -753,7 +784,7 @@ jobs:
       run: |
         qbs setup-toolchains --detect
         qbs setup-toolchains --type mingw $(which g++).exe mingw-qt
-        qbs setup-qt $(which qmake).exe qt
+        qbs setup-qt $(cygpath $(where ${{ matrix.config.qmake }})) qt
         qbs config profiles.qt.baseProfile ${{ matrix.config.testProfile }}
         qbs config defaultProfile qt
         qbs config --list
