quickjs: update to v0.10.1
========== Performance data for Resolving ==========
    Old instruction count: 9909962211
    New instruction count: 9943804040
    Relative change: 0 %
    Old peak memory usage: 130077608 Bytes
    New peak memory usage: 128967040 Bytes
    Relative change: 0 %
========== Performance data for Rule Execution ==========
    Old instruction count: 4143311036
    New instruction count: 4114932202
    Relative change: 0 %
    Old peak memory usage: 51778008 Bytes
    New peak memory usage: 51695560 Bytes
    Relative change: 0 %
========== Performance data for Null Build ==========
    Old instruction count: 1290615283
    New instruction count: 1290557063
    Relative change: 0 %
    Old peak memory usage: 41177608 Bytes
    New peak memory usage: 41175240 Bytes
    Relative change: 0 %

Change-Id: I3b01f57328c540521c1ee5572891a91658e7d24f
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/src/shared/quickjs/CMakeLists.txt
+++ b/src/shared/quickjs/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_qbs_library(qbsquickjs
     STATIC
     SOURCES
+        builtin-array-fromasync.h
         cutils.c cutils.h
         libbf.c libbf.h
         libregexp-opcode.h
@@ -12,6 +13,7 @@ add_qbs_library(qbsquickjs
         quickjs-c-atomics.h
         quickjs-opcode.h
         quickjs.c quickjs.h
+        xsum.c xsum.h
     DEFINES
         "CONFIG_VERSION=\"2021-03-27\""
 )
