GitHub actions: fix release job on Windows
Amends be90835125388af5e92d6b1ae5c0eb6d89800afe.

Change-Id: I2750814428578e5b67ab820928a43629c99067c3
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -151,6 +151,7 @@ jobs:
         qbs.buildVariant:release
         modules.cpp.compilerWrapper:clcache
         project.withTests:false
+        modules.qbsbuildconfig.enableBundledQt:true
         modules.qbsbuildconfig.enableUnitTests:false
         modules.cpp.treatWarningsAsErrors:true
         project.withDocumentation:true
