--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -122,13 +122,13 @@ services:
         QTCREATOR_VERSION: 5.0.3
 
   windows:
-    image: ${DOCKER_USER:-qbsbuild}/qbsdev:windowsservercore-6.7.3_1.24.0-0
+    image: ${DOCKER_USER:-qbsbuild}/qbsdev:windowsservercore-6.8.3_3.0.1-0
     build:
       dockerfile: docker/windowsservercore/Dockerfile
       context: .
       args:
-        QT_VERSION: 6.7.3
-        QTCREATOR_VERSION: 15.0.1
+        QT_VERSION: 6.8.3
+        QBS_VERSION: 3.0.1
     working_dir: 'C:/qbs'
     environment:
       - BUILD_OPTIONS
